# moradi2024cnnFLtransformer

./: README.md  run_script.sh
cnn_nnunet_monai/: monai_dynunet.py  nnunet.ipynb
flower/: base_example.py
flower/dynunet-fl/: README.md  flwr_results_DynUNet.py  pyproject.toml  run_flower.sh
flower/dynunet-fl/dynunet_fl/: __init__.py  client_app.py  new_strategy.py  server_app.py
flower/swinunetr-fl/: README.md  flwr_results_swinUNETR.py  pyproject.toml
flower/swinunetr-fl/swinunetr_fl/: __init__.py  client_app.py  new_strategy.py  server_app.py  task.py
transformers_unetr_swinunetr/: swinunetr_picai_prediction.py  swinunetr_train.py  unetr_picai_train.ipynb
utils/: generate_dataset_json.ipynb
