[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swinunetr-fl"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "ashkanm"

[tool.flwr.app.components]
serverapp = "first_example.server_app:app"
clientapp = "first_example.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-fit = 1
local-epochs = 50
save-dir = "./flwr_output/"
dataset-json = "dataset_unetr_picai.json"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 2
options.backend.client-resources.num-cpus = 2 
options.backend.client-resources.num-gpus = 0.2
